--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,15 @@
             "styles": [
               "src/styles.css",
               "src/assets/bootstrap/css/bootstrap.min.css",
-              "src/assets/fontawesome/css/fontawesome.css"
+              "src/assets/fontawesome/css/fontawesome.css",
+              "node_modules/datatables/media/css/jquery.dataTables.css"
             ],
             "scripts": [
               "src/assets/jquery/jquery.min.js",
               "src/assets/popper.js/dist/umd/popper.min.js",
               "src/assets/bootstrap/js/bootstrap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/chart.js/dist/Chart.min.js",
+              "node_modules/datatables/media/js/jquery.dataTables.min.js"
             ]
           },
           "configurations": {
