--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-pagination": "^3.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "sweetalert2": "^7.25.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
